fix [#30653] Wrong image at UV/Image Editor window

render results would be displayed on loading new files if the scene names matches, now free render-results so as not to display stale data - also saves some memory.