source/blender/render/intern/source/pipeline.c
@@ -410,6 +410,20 @@ void RE_FreeAllRender(void)
 	}
 }
 
+/* on file load, free all re */
+void RE_FreeAllRenderResults(void)
+{
+	Render *re;
+
+	for (re = RenderGlobal.renderlist.first; re; re = re->next) {
+		render_result_free(re->result);
+		render_result_free(re->pushedresult);
+
+		re->result = NULL;
+		re->pushedresult = NULL;
+	}
+}
+
 /* ********* initialize state ******** */
 
 
